Moved the debug variable to the .env file

--- a/example.env
+++ b/example.env
@@ -1,3 +1,4 @@
 APP_SECRET_KEY='very secret key'
 GOOGLE_CLIENT_ID='20833......apps.googleusercontent.com'
 GOOGLE_CLIENT_SECRET='jmiJXU....'
+DEBUG=False
