added a created column in db

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,2 +1,11 @@
 {
+  "sqltools.connections": [
+    {
+      "previewLimit": 50,
+      "driver": "SQLite",
+      "database": "${workspaceFolder:api}/database.db",
+      "name": "database"
+    }
+  ],
+  "sqltools.useNodeRuntime": true
 }
