--- a/example.env
+++ b/example.env
@@ -1,4 +1,2 @@
-APP_SECRET_KEY='very secret key'
-GOOGLE_CLIENT_ID='20833......apps.googleusercontent.com'
-GOOGLE_CLIENT_SECRET='jmiJXU....'
-DEBUG=False
+AUTH0_DOMAIN=[domain]
+API_IDENTIFIER[custom-domain]
